--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <br>
             É importante notar que as características específicas das faixas intermediárias podem variar significativamente dependendo da localização geográfica e das condições locais. Portanto, o estudo das faixas intermediárias é fundamental para uma compreensão mais completa da diversidade ambiental e geográfica de uma região, bem como para o planejamento e a gestão adequada dos recursos naturais.
         </p>
-        <img class="mapa" src="c:\Users\-\Documents\GitHub\Faixas-intermediarias\Mapa geral.png">
+        <img class="mapa" src="https://i.pinimg.com/564x/92/0e/45/920e45763fde313c672a5b876e65dc2b.jpg">
         <h6>
             Cola da Web. Faixas de Transição - Geografia do Brasil. 
             https://www.coladaweb.com/geografia-do-brasil/faixas-de-transicao. Acesso em 25 de agosto de 2023.
@@ -37,7 +37,7 @@
             <br>
             Em resumo, a Mata dos Cocais é uma região singular no nordeste do Brasil, caracterizada por sua vegetação peculiar, com destaque para as palmeiras carnaúba e babaçu, e é um exemplo importante de como a natureza desempenha um papel vital nas vidas das pessoas e na preservação da biodiversidade.
         </p>
-        <img src="c:\Users\-\Documents\GitHub\Faixas-intermediarias\Mata dos cocais.jpg">
+        <img src="https://i.pinimg.com/564x/8b/fc/e7/8bfce7b962db01069502e69b9c60e302.jpg">
         <h6>
             Cola da Web. Faixas de Transição - Geografia do Brasil. 
             https://www.coladaweb.com/geografia-do-brasil/faixas-de-transicao. Acesso em 25 de agosto de 2023.
@@ -55,7 +55,7 @@ Culturalmente, o Agreste é conhecido por sua rica herança, incluindo a música
 <br>
 Em resumo, o Agreste é uma região única do Brasil que desempenha um papel vital na transição entre o semiárido e as áreas mais úmidas do litoral nordestino, apresentando uma rica diversidade geográfica e cultural.
         </p>
-        <img src="c:\Users\-\Documents\GitHub\Faixas-intermediarias\Agreste.jpg">
+        <img src="blob:https://br.pinterest.com/1774ddc5-5e36-4dd7-9278-1280104828fe">
         <h6>
             Cola da Web. Faixas de Transição - Geografia do Brasil. 
             https://www.coladaweb.com/geografia-do-brasil/faixas-de-transicao. Acesso em 25 de agosto de 2023.
@@ -75,7 +75,7 @@ Além da sua importância ecológica, o Pantanal também desempenha um papel vit
 <br>
 Em resumo, o Complexo do Pantanal Mato-Grossense é um tesouro natural do Brasil, uma maravilha da biodiversidade e uma área única de beleza cênica que desempenha um papel crucial na conservação da vida selvagem e na regulação hídrica da região.
         </p>
-        <img src="c:\Users\-\Documents\GitHub\Faixas-intermediarias\Complexo do Pantanal Mato-Grossense.jpg">
+        <img src="https://i.pinimg.com/564x/a2/00/f2/a200f27786da6cda7cb126b758176be1.jpg">
         <h6>
             Cola da Web. Faixas de Transição - Geografia do Brasil. 
             https://www.coladaweb.com/geografia-do-brasil/faixas-de-transicao. Acesso em 25 de agosto de 2023.
