--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ Culturalmente, o Agreste é conhecido por sua rica herança, incluindo a música
 <br>
 Em resumo, o Agreste é uma região única do Brasil que desempenha um papel vital na transição entre o semiárido e as áreas mais úmidas do litoral nordestino, apresentando uma rica diversidade geográfica e cultural.
         </p>
-        <img src="https://br.pinterest.com/1774ddc5-5e36-4dd7-9278-1280104828fe">
+        <img src="https://i.pinimg.com/564x/2c/5c/67/2c5c672cc0699425dfc83a537e14c72b.jpg">
         <h6>
             Cola da Web. Faixas de Transição - Geografia do Brasil. 
             https://www.coladaweb.com/geografia-do-brasil/faixas-de-transicao. Acesso em 25 de agosto de 2023.
